# model-structure-viewer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: app.py
docs/: frontend_structure_architecture.md  minimax_m3_mapping.md  model_source_resolution.md  reverse_original_space.md  testing_skill.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  diagnostics.js  diagnostics.test.js  exporters.js  exporters.test.js  styles.css
frontend/src/api/: client.js
frontend/src/components/: ArchitectureTab.jsx  AttributeGrid.jsx  Drawer.jsx  EmptyState.jsx  ExportTab.jsx  Header.jsx  LayersTab.jsx  ModuleCards.jsx  NodeDetailPanel.jsx  RawConfigTab.jsx  ShapeFlow.jsx  StructureSearchBox.jsx  SummaryChips.jsx  Tabs.jsx
models/: README.md  catalog.json
scripts/: generate-model-catalog.mjs  verify-builtin-models.mjs  verify-page.mjs
src/model_structure_viewer/: __init__.py  api.py  cli.py  errors.py  exporters.py  resolver.py  schemas.py  service.py  settings.py  structure.py
tests/: test_api_structure.py  test_deepseek_v3_structure.py  test_exporters.py  test_fallback.py  test_fold.py  test_introspect_runtime_patch.py  test_layered_structure.py  test_minimax_config_normalizer.py  test_minimax_m3_structure.py  test_repair_builder.py  test_repair_classifier.py  test_repair_registry.py  test_repair_runner.py  test_repair_runtime.py  test_repair_strategies.py  test_resolver.py  test_settings.py  test_structure_helpers.py  test_transformers_verify.py  test_verification_compare.py
(+88 files in other folders)
