[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-structure-viewer"
version = "0.1.0"
description = "Configuration-driven model structure viewer with local and Hugging Face sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "transformers>=4.40",
  "accelerate>=0.27",
  "torch>=2.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
msv = "model_structure_viewer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
